bugFix: alignment issue

--- a/src/css/resume_stylesheet.css
+++ b/src/css/resume_stylesheet.css
@@ -62,10 +62,13 @@ body {
 
 #body-container {
     display: grid;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
     padding: 10px;
     max-width: 100%;
     width: 100%;
+    margin-left: 12%;
 }
 
 .body-main{
